fix margin on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -914,6 +914,6 @@ a.my-gallery__img--main {
   }
   .my-gallery a {
     width: 100%;
-    margin: 0 4px 4px 0;
+    margin: 0 8px 8px 0;
   }
 }
